# cs360-WeightToGoMobile

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SUMMARY.md  WeighToGo_Flutter_Migration_Guide.md  release-please-config.json
.github/workflows/: android-ci.yml  release.yml  security-audit.yml
android/: README.md
docs/: README.md
docs/adr/: 0007-rebuild-as-full-stack-web-application.md  0008-polyglot-monorepo.md  0009-email-as-primary-user-identifier.md  0010-generic-authentication-error-policy.md  0012-three-pattern-backend-architecture.md  0013-refresh-token-rotation-family-revocation.md  0017-csrf-origin-referer-validation.md  (+2 more)
docs/api/: openapi.json
web/: README.md
web/backend/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
web/backend/alembic/: env.py
web/backend/alembic/versions/: 0005_achievements.py  0006_user_preferences.py
web/backend/src/weighttogo/: config.py  main.py
web/backend/src/weighttogo/achievements/: __init__.py
web/backend/src/weighttogo/achievements/application/: __init__.py  detect_achievements.py
web/backend/src/weighttogo/achievements/domain/: __init__.py  entities.py  milestone_detector.py  ports.py
web/backend/src/weighttogo/achievements/infrastructure/: __init__.py  models.py  repositories.py
web/backend/src/weighttogo/achievements/interface/: __init__.py  router.py
web/backend/src/weighttogo/dashboard/application/: build_dashboard_summary.py
web/backend/src/weighttogo/dashboard/interface/: router.py
web/backend/src/weighttogo/goals/application/: list_goals.py
web/backend/src/weighttogo/goals/domain/: ports.py
web/backend/src/weighttogo/goals/infrastructure/: repositories.py
web/backend/src/weighttogo/goals/interface/: router.py
web/backend/src/weighttogo/interface/middleware/: csrf.py
web/backend/src/weighttogo/preferences/infrastructure/: models.py
web/backend/src/weighttogo/preferences/interface/: schemas.py
web/backend/src/weighttogo/shared/: cache.py  problem_detail.py
web/backend/src/weighttogo/weight_tracking/interface/: router.py
web/backend/tests/: test_config.py  test_csrf_middleware.py  test_health.py
web/backend/tests/architecture/: test_import_contracts.py
web/backend/tests/integration/: conftest.py
web/backend/tests/integration/achievements/: test_achievement_endpoints.py  test_weight_entry_detection.py
web/backend/tests/integration/dashboard/: test_dashboard_cache.py
web/backend/tests/integration/goals/: test_goal_endpoints.py
web/backend/tests/integration/weight/: test_index_usage_postgres.py
web/backend/tests/unit/achievements/: test_detect_achievements_use_case.py  test_entities.py  test_milestone_detector.py  test_repository_port.py  test_sqlalchemy_model.py  test_sqlalchemy_repository.py
web/backend/tests/unit/dashboard/: test_build_dashboard_summary_use_case.py
web/backend/tests/unit/goals/: test_list_goals_use_case.py  test_sqlalchemy_repository.py
web/backend/tests/unit/preferences/: test_migration_0006.py  test_schemas.py
web/backend/tests/unit/shared/: test_cache.py  test_exceptions.py  test_logging.py  test_problem_detail.py
(+91 files in other folders)
