[project]
name = "weighttogo"
version = "0.1.0"
description = "Weigh to Go! web application backend (FastAPI)."
requires-python = ">=3.12"
authors = [{ name = "Rick Goshen" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    # Pinned to the ruff-pre-commit rev in .pre-commit-config.yaml; bump both together.
    "ruff==0.15.14",
    "mypy>=1.13",
    "import-linter>=2.1",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weighttogo"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C4", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"alembic/versions/*" = ["D", "F401"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=weighttogo --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

# ---------------------------------------------------------------------------
# import-linter: Clean Architecture dependency contracts (SRS §4.2)
#
# Rule: domain and application layers must not import framework packages.
# Infrastructure and interface layers may import any package.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["weighttogo"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "auth: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.auth.domain",
    "weighttogo.auth.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

[[tool.importlinter.contracts]]
name = "goals: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.goals.domain",
    "weighttogo.goals.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

[[tool.importlinter.contracts]]
name = "users: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.users.domain",
    "weighttogo.users.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]

[[tool.importlinter.contracts]]
name = "weight_tracking: domain and application must not import frameworks"
type = "forbidden"
source_modules = [
    "weighttogo.weight_tracking.domain",
    "weighttogo.weight_tracking.application",
]
forbidden_modules = ["fastapi", "sqlalchemy", "pydantic", "alembic", "starlette"]
